# suid-script

./: ChangeLog  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
scripts/: make-changelog  make-version
src/: Makefile.am  suid-script.c
